[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
async-trait = "0.1.68"
async-bybit = "0.0.1"
ring = "0.16.20"
hex = "0.4"
reqwest = "0.11.18"
serde = "1.0.163"
dotenv ={ workspace = true}
tokio = { workspace = true}
axum = { workspace = true}
axum-server = "0.5.1"
kucoin_rs = "0.4.4"
rust-bybit = { git = "https://github.com/yufuquant/rust-bybit.git" }


[dev-dependencies]
openssl = "0.10.38"
crossbeam-channel = "0.3.9"
pkg-config = "0.3.16"
hkdf = "0.12.3"
p384 = "0.11.2"

[features]
